fixed navbar-collapse shadow effect

--- a/style.css
+++ b/style.css
@@ -265,8 +265,5 @@ p{
     p{
         font-size: 15px;
     }
-    #navbarNav{
-        box-shadow: 0px 10px 20px rgb(184, 184, 184);
-    }
 }
 
